@@ -13,6 +13,11 @@ CHANGES
     subquery, when joining on the same criterion as was on the 
     inside.
 
+  - Fixed bug in Query whereby the usage of aliased() constructs
+    would fail if the underlying table (but not the actual alias) 
+    were referenced inside the subquery generated by 
+    q.from_self() or q.select_from().
+    
 0.6beta2
 ========
 
